<resources>
    <string name="app_name">ereader-home</string>
    <string name="home_page_title">书架</string>
    <string name="search_describe">search books</string>
    <string name="more_describe">more options</string>
    <string name="menu_describe">show slide function panel</string>
    <string name="quick_read_button">go on your last reading</string>
    <string name="nav_header_des">an image</string>
    <string name="drawer_open">slide bar open</string>
    <string name="drawer_close">slide bar close</string>
    <string name="about">关于</string>
    <string name="about_group">About</string>
    <string name="setting">设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="full_screen">全屏</string>
    <string name="bookmark">书签</string>
    <string name="home">项目主页</string>
    <string name="import_item">本地导入</string>
    <string name="manage_item">书架管理</string>
    <string name="list_show_books">列表模式</string>
    <string name="cloud_bookshelf">云书架</string>
    <string name="tradition_show_books">书架模式</string>
    <string name="sort_item_by_name">按名称排序</string>
    <string name="sort_item_by_time">按时间排序</string>
    <string name="done">完成</string>
    <string name="done_describe">operation done</string>
    <string name="cancel">取消</string>
    <string name="chosen_n_books">已选n本</string>
    <string name="select_all">全选</string>
    <string name="pin_top">置顶</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="import_from_file">导入</string>
    <string name="import_forbid">不可用</string>
    <string name="book_picture">book picture</string>
    <string name="select_book_to_edit">select book to edit</string>
    <string name="detail">详情</string>
    <string name="book_format">- %1$s -</string>
</resources>
