<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/bookmark"
            android:icon="@drawable/bookmark"
            android:title="@string/bookmark" />
        <item
            android:id="@+id/full_screen"
            android:icon="@drawable/full_screen"
            android:title="@string/full_screen"
            app:actionLayout="@layout/switch_layout"
            app:showAsAction="always" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />

    </group>

    <item android:title="@string/about_group">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
