<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nkcs.ereader.home.ui.HomeActivity">

    <!--main view of the drawerLayout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#7e8b8c"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/home_page_title"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#7e8b8c"
            android:contentDescription="@string/more_describe"
            android:padding="14dp"
            android:scaleType="fitCenter"
            android:src="@drawable/more" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/imageButton2"
            android:layout_toStartOf="@+id/imageButton2"
            android:background="#7e8b8c"
            android:contentDescription="@string/search_describe"
            android:padding="14dp"
            android:scaleType="fitCenter"
            android:src="@drawable/search" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#7e8b8c"
            android:contentDescription="@string/menu_describe"
            android:padding="14dp"
            android:scaleType="fitCenter"
            android:src="@drawable/menu" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/quick_read_button_background"
            android:elevation="12dp"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/book"
            android:contentDescription="@string/quick_read_button" />


    </RelativeLayout>

    <!--slide bar of drawerLayout-->
    <ListView
        android:layout_width="240dp"
        android:layout_height="match_parent">

    </ListView>

</android.support.v4.widget.DrawerLayout>
