<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <View
        android:id="@+id/placeholder"
        android:layout_width="0dp"
        android:layout_height="@dimen/placeholder_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/homepage_elevation"
            android:outlineProvider="bounds">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/homepage_title_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="fill_vertical|center_horizontal"
                android:text="@string/home_page_title"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:id="@+id/menu_btn"
                android:layout_width="@dimen/homepage_button_side"
                android:layout_height="@dimen/homepage_button_side"
                android:layout_alignBottom="@+id/title"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/manage_side_btn_padding"
                android:text="@string/complete"
                android:textColor="#fff"
                android:textSize="@dimen/title_text_size" />


            <TextView
                android:id="@+id/slide_bar_btn"
                android:layout_width="@dimen/homepage_button_side"
                android:layout_height="@dimen/homepage_button_side"
                android:layout_alignBottom="@+id/title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/manage_side_btn_padding"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textSize="@dimen/title_text_size" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottom_height"
        android:elevation="@dimen/homepage_elevation"
        android:orientation="horizontal"
        android:outlineProvider="bounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#fff">

        <TextView
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/select_all"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="@dimen/bottom_drawable_top_padding"
            android:text="@string/select_all" />

        <TextView
            android:id="@+id/pin_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/pin_top"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="@dimen/bottom_drawable_top_padding"
            android:text="@string/pin_top" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/delete"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="@dimen/bottom_drawable_top_padding"
            android:text="@string/delete" />

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/share"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="@dimen/bottom_drawable_top_padding"
            android:text="@string/share" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>