<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--stupid way to take place, yeah I know-->
    <View
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/placeholder_height"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:clipToPadding="false">

        <RelativeLayout
            android:id="@+id/origin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/homepage_elevation"
            android:outlineProvider="bounds"
            android:visibility="visible">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/homepage_title_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="fill_vertical|center_horizontal"
                android:text="@string/home_page_title"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/title_text_size" />

            <ImageButton
                android:id="@+id/menu_btn"
                android:layout_width="@dimen/homepage_button_side"
                android:layout_height="@dimen/homepage_button_side"
                android:layout_alignBottom="@+id/title"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/more_describe"
                android:padding="@dimen/homepage_image_btn_padding"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/more" />

            <ImageButton
                android:id="@+id/search_btn"
                android:layout_width="@dimen/homepage_button_side"
                android:layout_height="@dimen/homepage_button_side"
                android:layout_alignBottom="@+id/title"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/menu_btn"
                android:layout_toStartOf="@+id/menu_btn"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/search_describe"
                android:padding="@dimen/homepage_image_btn_padding"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/search" />

            <ImageButton
                android:id="@+id/slide_bar_btn"
                android:layout_width="@dimen/homepage_button_side"
                android:layout_height="@dimen/homepage_button_side"
                android:layout_alignBottom="@+id/title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/menu_describe"
                android:padding="@dimen/homepage_image_btn_padding"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/menu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:elevation="@dimen/homepage_elevation"
            android:outlineProvider="bounds"
            android:visibility="invisible">

            <ImageView
                android:layout_width="@dimen/homepage_button_side"
                android:layout_height="@dimen/homepage_title_height"
                android:padding="@dimen/homepage_image_btn_padding"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/search" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/search_edit"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/homepage_button_side"
                android:layout_marginStart="@dimen/homepage_button_side"
                android:backgroundTint="@color/importButtonBackground"
                android:singleLine="true"
                android:textColor="@color/importButtonBackground"
                android:textColorHint="@color/importButtonBackground"
                android:textCursorDrawable="@drawable/search_edit_cursor"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/search_cancel_btn"
                android:layout_width="@dimen/homepage_button_side"
                android:layout_height="@dimen/homepage_button_side"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:padding="@dimen/homepage_image_btn_padding"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/close" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/homepage_elevation"
            android:outlineProvider="bounds"
            android:visibility="invisible">

            <TextView
                android:id="@+id/title_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/homepage_title_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="fill_vertical|center_horizontal"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="@dimen/title_text_size"
                android:visibility="visible" />

            <TextView
                android:id="@+id/menu_btn_2"
                android:layout_width="@dimen/homepage_button_side"
                android:layout_height="@dimen/homepage_button_side"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/manage_side_btn_padding"
                android:text="@string/complete"
                android:textColor="#fff"
                android:textSize="@dimen/title_text_size" />


            <TextView
                android:id="@+id/cancel_edit_btn"
                android:layout_width="@dimen/homepage_button_side"
                android:layout_height="@dimen/homepage_button_side"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/manage_side_btn_padding"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textSize="@dimen/title_text_size" />

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/quick_read_btn"
            android:layout_width="@dimen/homepage_quick_button_side"
            android:layout_height="@dimen/homepage_quick_button_side"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="19dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/quick_read_btn_background"
            android:contentDescription="@string/quick_read_button"
            android:padding="@dimen/homepage_quick_read_padding"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/book" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/edit_layout"
            android:visibility="visible">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_books"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_row="0" />
        </GridLayout>

        <LinearLayout
            android:id="@+id/bottom_btns"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_height"
            android:layout_alignParentBottom="true"
            android:background="#fff"
            android:elevation="@dimen/homepage_elevation"
            android:orientation="horizontal"
            android:outlineProvider="bounds"
            android:visibility="invisible">

            <TextView
                android:id="@+id/select_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/select_all"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="@dimen/bottom_drawable_top_padding"
                android:text="@string/select_all" />

            <TextView
                android:id="@+id/pin_top"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/pin_top"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="@dimen/bottom_drawable_top_padding"
                android:text="@string/pin_top" />

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/delete"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="@dimen/bottom_drawable_top_padding"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/share"
                android:gravity="center_vertical|center_horizontal"
                android:paddingTop="@dimen/bottom_drawable_top_padding"
                android:text="@string/share" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>