<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/book_item"
    android:layout_width="match_parent"
    android:layout_height="162dp"
    android:background="@drawable/book_item_gradient">

    <View
        android:id="@+id/book_item_shadow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/book_shelf_edge"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/book_item_shadow"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/book_shelf_edge"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/book_item_border"
        android:contentDescription="@string/book_picture"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/book_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/book_item_title"
        android:padding="10dp"
        android:text="hhh"
        app:layout_constraintBottom_toBottomOf="@id/book_image"
        app:layout_constraintEnd_toEndOf="@id/book_image"
        app:layout_constraintStart_toStartOf="@id/book_image"
        app:layout_constraintTop_toTopOf="@id/book_image" />

    <TextView
        android:id="@+id/book_format"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/book_format"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="@color/book_extension"
        app:layout_constraintBottom_toBottomOf="@id/book_image"
        app:layout_constraintEnd_toEndOf="@id/book_image"
        app:layout_constraintStart_toStartOf="@id/book_image" />

    <View
        android:id="@+id/book_image_shadow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/book_shelf_edge"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/book_image_shadow"
        android:contentDescription="@string/book_picture"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--When ordering the layout on pre Lollipop devices Android will look to the order of the items in the XML.
     The further down an item is in the XML the higher up it is in Z-index.
     https://stackoverflow.com/a/38534042/7526989-->

    <ImageView
        android:id="@+id/pin_top"
        android:layout_width="30dp"
        android:layout_height="15dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/pin_top"
        android:contentDescription="@string/select_book_to_edit"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/book_image_shadow"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/check_box_image"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/select"
        android:visibility="gone"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/select_book_to_edit" />

</android.support.constraint.ConstraintLayout>